--- a/style.css
+++ b/style.css
@@ -17,5 +17,8 @@ h1 {
     width: auto;
     height: auto;
     position: absolute;
+    top: 50%;
+    bottom: 50%;
+    transform: translate(-50%,-50%);
 }
 
