--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
 .video-container video {
     min-width: 100%;
     min-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
     position: absolute;
 }
