--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 
 .video-container video {
     min-width: 100%;
-    min-height: fit-content;
+    min-height: auto;
     width: 100%;
     height: 100%;
 }
