--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@ h1 {
 .video-container {
     position: relative;
     padding-bottom: 50%;
-    height: 0;
 }
 
 .video-container video {
     min-width: 100%;
-    min-height: auto;
+    min-height: 100%;
     width: 100%;
     height: 100%;
 }
