--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ h1 {
 
 .video-container {
     position: relative;
-    padding-bottom: 50%;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
 
 .video-container video {
