--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ h1 {
 }
 
 .video-container video {
-    min-width: auto;
+    min-width: 100%;
     min-height: 100%;
-    width: auto !important;
+    width: 100% !important;
     height: 100% !important;
 }
 
