--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ h1 {
     min-width: 100%;
     min-height: 100%;
     width: 100% !important;
-    height: 100% !important;
+    height: auto !important;
 }
 
