--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ h1 {
     color: lightskyblue;
 }
 
+main {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: mandatory;
+}
+
+main section {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .video-container video {
     min-width: 100%;
     min-height: 100%;
