--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ main section {
     display: flex;
     justify-content: center;
     align-items: center;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
 }
 
 .video-container video {
