--- a/style.css
+++ b/style.css
@@ -8,11 +8,7 @@ main {
     scroll-snap-type: mandatory;
 }
 
-main section {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+main > section {
     scroll-snap-align: start;
     scroll-snap-stop: always;
 }
