--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ main {
     scroll-snap-type: mandatory;
 }
 
-main > section {
+section {
     scroll-snap-align: start;
     scroll-snap-stop: always;
 }
