--- a/style.css
+++ b/style.css
@@ -2,15 +2,16 @@ h1 {
     color: lightskyblue;
 }
 
-main {
+html {
     height: 100vh;
     overflow-y: scroll;
-    scroll-snap-type: mandatory;
+    scroll-snap-type: y mandatory;
 }
 
 section {
     scroll-snap-align: start;
     scroll-snap-stop: always;
+    height: 100vh;
 }
 
 .video-container video {
