--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 section {
     scroll-snap-align: start;
     scroll-snap-stop: always;
-    height: 100vh;
+    height: fit-content;
 }
 
 .video-container video {
