--- a/style.css
+++ b/style.css
@@ -21,3 +21,9 @@ section {
     height: fit-content;
 }
 
+.image1 img {
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: fit-content;
+}
